Fix: .left's alignment

--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -26,7 +26,7 @@
 .left {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-start;
     height: 100%;
 
     > * {
